plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.7' apply false
    id 'io.spring.dependency-management' version '1.1.7'
}

allprojects {
    group = 'com.company'
    version = '0.0.1-SNAPSHOT'

    repositories {
        mavenCentral()
        maven { url 'https://maven.egovframe.go.kr/maven/' }
    }
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'java-library'
    apply plugin: 'io.spring.dependency-management'
    
    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    tasks.withType(JavaCompile).configureEach {
        options.encoding = 'UTF-8'
        options.compilerArgs << "-parameters"
        // Suppress ALL warnings for eGovFrame legacy code compatibility (Java 21 forRemoval deprecations)
        options.deprecation = false
        options.warnings = false
        options.compilerArgs << "-nowarn"
    }
    
    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }

    dependencyManagement {
        imports {
            mavenBom "org.springframework.boot:spring-boot-dependencies:3.3.7"
        }
    }

    dependencies {
        compileOnly 'org.projectlombok:lombok:1.18.34'
        annotationProcessor 'org.projectlombok:lombok:1.18.34'
        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    }

    test {
        useJUnitPlatform()
    }
}
